# freetype

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
include/freetype/config/: ftmodule.h
