load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "freetype",
    srcs = glob(
        [
            "include/**/*.h",
            "src/**/*.h",
            "src/**/*.c",
        ],
        exclude = [
            "src/bzip2/**/*",
            "src/gzip/**/*",
            "src/bzip2/**/*",
            "src/lzw/**/*",
            "src/tools/**/*",
            "src/gxvalid/**/*",
            "src/sfnt/**/*",
            "src/pcf/**/*",
            "src/base/ftbase.c",
            "src/autofit/autofit.c",
            "src/type42/type42.c",
            "src/cache/ftcache.c",
            "src/bdf/bdf.c",
            "src/cff/cff.c",
            "src/cid/type1cid.c",
            "src/type1/type1.c",
            "src/otvalid/otvalid.c",
            "src/pcf/pcf.c",
            "src/pfr/pfr.c",
            "src/psaux/psaux.c",
            "src/raster/raster.c",
            "src/sdf/sdf.c",
            "src/psnames/psnames.c",
            "src/pshinter/pshinter.c",
            "src/sfnt/sfnt.c",
            "src/svg/svg.c",
            "src/smooth/smooth.c",
            "src/truetype/truetype.c",
        ],
    ),
    defines = [
        "FT2_BUILD_LIBRARY",
    ],
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)
